--- a/addons/Makefile
+++ b/addons/Makefile
@@ -7,7 +7,7 @@ HOST ?= $(word 2, $(subst -, ,$(CC)))
 
 LIB = build/libaddons.a
 
-DEFINES  = -DNDEBUG -D_GNU_SOURCE
+DEFINES  = -DNDEBUG -D_GNU_SOURCE -DUPNP_STATIC_LIB
 CFLAGS  += -Wall -Wno-stringop-truncation -Wno-stringop-overflow -Wno-format-truncation -Wno-multichar -fPIC -ggdb -O2 $(DEFINES) -fdata-sections -ffunction-sections 
 
 PUPNP		= ../targets
