--- a/addons/Makefile
+++ b/addons/Makefile
@@ -2,13 +2,17 @@ ifeq ($(CC),cc)
 CC=$(lastword $(subst /, ,$(shell readlink -f `which cc`)))
 endif
 
+ifeq ($(findstring gcc,$(CC)),gcc)
+CFLAGS  += -Wno-stringop-truncation -Wno-stringop-overflow -Wno-format-truncation
+endif
+
 PLATFORM ?= $(firstword $(subst -, ,$(CC)))
 HOST ?= $(word 2, $(subst -, ,$(CC)))
 
 LIB = build/libaddons.a
 
 DEFINES  = -DNDEBUG -D_GNU_SOURCE -DUPNP_STATIC_LIB
-CFLAGS  += -Wall -Wno-stringop-truncation -Wno-stringop-overflow -Wno-format-truncation -Wno-multichar -fPIC -ggdb -O2 $(DEFINES) -fdata-sections -ffunction-sections 
+CFLAGS  += -Wall -Wno-multichar -fPIC -ggdb -O2 $(DEFINES) -fdata-sections -ffunction-sections 
 
 PUPNP		= ../targets
 
