--- a/_first.vcxproj
+++ b/_first.vcxproj
@@ -97,7 +97,7 @@
       <Command>first.cmd</Command>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Outputs>upnpconfig.h</Outputs>
+      <Outputs>N/A</Outputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -119,7 +119,7 @@
       <Command>first.cmd</Command>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Outputs>upnpconfig.h</Outputs>
+      <Outputs>N/A</Outputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -137,7 +137,7 @@
       <Command>first.cmd</Command>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Outputs>upnpconfig.h</Outputs>
+      <Outputs>N/A</Outputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -159,7 +159,7 @@
       <Command>first.cmd</Command>
     </CustomBuildStep>
     <CustomBuildStep>
-      <Outputs>upnpconfig.h</Outputs>
+      <Outputs>N/A</Outputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
